--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<!--Name-->
+		<label for="name">Name</label>
+		<input name="name" id="name" type="text" placeholder="Name">
+		<!--Phone Number-->
+		<label for="phone">Phone Number</label>
+		<input name="Phone Number" id="phone" type="text" placeholder="Phone Number">
+		<!--Address-->
+		<label for="address">Address</label>
+		<input name="Address" id="address" type="text">
+		<!--checkbox-->
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input name="checkbox" id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
+		<!--multiSelect-->
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+			<option>select</option>
+			<option value="St. Bernard">St. Bernard</option>
+			<option value="Cane Corso">Cane Corso</option>
+			<option value="Chow-Chow">Chow-Chow</option>
+			<option value="Golden Retriever">Golden Retriever</option>
+			<option value="Siberian Husky">Siberian Husky</option>
+		</select>
+		<button value="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
