--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<input name="Phone Number" id="phone" type="text" placeholder="Phone Number">
 		<!--Address-->
 		<label for="address">Address</label>
-		<input name="Address" id="address" type="text">
+		<input name="Address" id="address" type="text" placeholder="Address">
 		<!--checkbox-->
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
 		<input name="checkbox" id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
