--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form>
-		<!--Name-->
+	<!--Name-->
 		<label for="name">Name</label>
 		<input name="name" id="name" type="text" placeholder="Name">
-		<!--Phone Number-->
+	<!--Phone Number-->
 		<label for="phone">Phone Number</label>
 		<input name="Phone Number" id="phone" type="text" placeholder="Phone Number">
-		<!--Address-->
+	<!--Address-->
 		<label for="address">Address</label>
 		<input name="Address" id="address" type="text" placeholder="Address">
-		<!--checkbox-->
+	<!--checkbox-->
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
 		<input name="checkbox" id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
-		<!--multiSelect-->
+	<!--multiSelect-->
 		<label for="multiSelect">Please select your preferred breeds</label>
 		<select id="multiSelect">
 			<option>select</option>
@@ -31,7 +31,8 @@
 			<option value="Golden Retriever">Golden Retriever</option>
 			<option value="Siberian Husky">Siberian Husky</option>
 		</select>
-		<button value="submit">Submit</button>
+	<!--Select-->
+		<input type="submit" id="submit" value="Submit"/>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
